# omniverselab

./: .gitignore  404.html  LICENSE  README.md  RESEARCH_NOTES.md  index.html  mkdocs.yml
IsaacSim/: README_VM_SYSTEM_CHECK.md  README_isaac_ros2_setup.md  arduino_tutorial.md  autonomous_driving_isaac_sim.py  (+37 more)
mylerobot/: .gitignore  LIBERO_PLUS_GUIDE.md  PROJECT_STATUS.md  README.md  READOUT_PROBE_PLAN.md  REAL_WORLD_DEPLOYMENT_PLAN.md  ROAD_B_DESIGN.md  ROAD_B_PLAN.md  SETUP.md  pyproject.toml
mylerobot/mylerobot/: __init__.py  _env_shim.py
mylerobot/mylerobot/policies/act_bev/: __init__.py  aux_head.py  bev_encoder.py  configuration_act_bev.py  modeling_act_bev.py
mylerobot/mylerobot/policies/act_cheat_noisy/: __init__.py  configuration_act_cheat_noisy.py  modeling_act_cheat_noisy.py
mylerobot/mylerobot/policies/act_lang/: __init__.py  configuration.py  fusion.py  modeling.py  text_encoder.py
mylerobot/mylerobot/policies/pi0_voxel/: __init__.py  configuration_pi0_voxel.py  extrinsics_libero.py  modeling_pi0_voxel.py
mylerobot/mylerobot/policies/vision_fusion/: voxel_xattn.py
mylerobot/mylerobot/sim/: aloha_multicam.py  libero_multicam.py
mylerobot/scripts/: compare_fragility.py  eval_act_sim.py  eval_camera_repair.py  eval_libero.py  eval_libero_plus_fragility.py  eval_pi0_libero.py  probe_object_grounding.py  probe_seed_convention.py  rerender_libero_multicam.py  train_act.py
mylerobot/tests/: conftest.py  test_act_bev_smoke.py  test_act_cheat_noisy_smoke.py  test_aloha_multicam.py  test_pi0_voxel.py  test_policy_forward.py  test_voxel_xattn.py
(+63 files in other folders)
